--- a/TODO
+++ b/TODO
@@ -1,5 +1,4 @@
 # set Api GET-Request Limit
-# implement parsing in apiValidation -> validateBody
 # create index on users email in mongodb
 # handle malformed ObjectId Error
 # updateOne with upsert: true
@@ -10,11 +9,8 @@
 # joi: check the start of lecture is before end of lecture
 # joi: parse date to string and set default value = ''
 # set an production logging and a seperate debugging loggin
-
+# admin login
 
 ================================
 
 Bugs:
-
-# "Cannot set headers after they are sent to the client" when calling /api/users
-# "no 
