new hashing for verfication codes and inserted jdoc template comments

--- a/TODO
+++ b/TODO
@@ -1,12 +1,9 @@
 # set Api GET-Request Limit
-# handle malformed ObjectId Error
-# updateOne with upsert: true
+# make verification codes unique
 # clear rules for min/max length of req bodys and req queries
 # when should jwt expire? 12h?
 # min lenght for passwords?
-# implement "foreign keys" in mongodb
 # joi: check the start of lecture is before end of lecture
-# joi: parse date to string and set default value = ''
 # set an production logging and a seperate debugging loggin
 
 ================================
