--- a/TODO
+++ b/TODO
@@ -3,6 +3,7 @@
 # min lenght for passwords?
 # set an production logging and a seperate debugging loggin
 # throw error, if no data changed on patch-req?
+# still show rooms if no courses are avalible and the other way around
 ================================
 
 Bugs:
