improved navigation between month and week

--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@
 # set an production logging and a seperate debugging loggin
 # throw error, if no data changed on patch-req?
 # still show rooms if no courses are avalible and the other way around
+# highlight current day
 ================================
 
 Bugs:
