--- a/TODO
+++ b/TODO
@@ -1,13 +1,12 @@
-# clear rules for min/max length of req bodys and req queries
 # when should jwt expire? 12h?
 # min lenght for passwords?
-# set an production logging and a seperate debugging loggin
 # highlight current day (in week and month)
 # set min and max time (08:00-18:00?) in week.jsx and form.jsx
 # check that lectures are not longer than a day and min one hour long
 # improve displaying existing lectures in week (maybe also in month)
 # display information about lectures in week
 # change production protocol back to https ( process.env.NODE_ENV === 'production' ? 'https' : 'http';)
+# find way to check if start is less than end in semesters/[id] without requireing both in req body.
 ================================
 
 Bugs:
