--- a/TODO
+++ b/TODO
@@ -16,3 +16,4 @@ Bugs:
 # changing start- & end-date of semesters doesnt work
 # updating lectures with form doesnt change the context (api request works)
 # changing the date of existing lectures causes weird behavior
+# logging in causes "invalid jwt" error (although jwt is valid), if pages gets refreshed user is logged in anyways
